# GeekChat

./: .env  .gitignore  DB.env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tg_bot.py
database/: .env  Dockerfile  connector.py  model.py
fastApi/: .env  Dockerfile  helper_funcion.py  helper_function.py  main.py  manager_connection.py  pattern_model.py  pydantic_model.py  score_calculate.py
frontend/: .env
frontend/public/: index.html
frontend/src/components/: AssistantWindow.vue  ChatWindow.vue  MaterialCard.vue  OneSessionWindow.vue  SidebarMain.vue
frontend/src/components/charts/: BarChart.vue  LineChart.vue
frontend/src/router/: index.js
frontend/src/views/: SessionChat.vue
notebooks/: .gitignore  ban_words.py  extract_all.py  research.ipynb  sentiment.py  toxicity.py  troubles_tiny.py
telegramBot/: .env  Dockerfile  requirements.txt  tg_bot.py
