[tool.poetry]
name = "geekchat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
loguru = "^0.7.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = {extras = ["standart"], version = "^22.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false