
[tool.poetry]
name = "geekchat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
loguru = "^0.7.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = {extras = ["standart"], version = "^22.0.0"}
torch = "^2.3.0"
transformers = "^4.40.1"
fastapi = "^0.110.2"
psycopg2 = "^2.9.9"
detoxify = "^0.5.2"
telebot = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
